# cmake-qt-gmock-template

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  testconfig.h.in  testdaten.sql
ToDoCore/unit_test/: CMakeLists.txt
cmake/Modules/: xTestUtil.cmake
gtest/: CMakeLists.txt  dummy.cc  dummy.h
gtest/unit_test/: CMakeLists.txt  dummy_test.cc
qtest/: CMakeLists.txt  benchmarking.cpp  containers.cpp  testgui.cpp  testgui2.cpp  testqstring.cpp
src/: CMakeLists.txt  Foo.h  foo.cpp  foo.h  main.cpp
test/: CMakeLists.txt  exampletest.cpp  exampletest.h  foomock.cpp  foomock.h
